<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tech.mystox.framework</groupId>
    <artifactId>YYDS</artifactId>
    <version>${revision}</version>
    <name>mystox-starter</name>
    <prerequisites>
    <maven>3.2.5</maven>
    </prerequisites>
    <description>mq rpc framework contains kafka/mqtt</description>
    <url>https://github.com/mystox/mystox-starter/blob/mystox-starter-SB2.0.4/README.md</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/mystox/mystox-starter</url>
    </scm>
    <developers>
        <developer>
            <name>mystox</name>
            <email>mystox@163.com</email>
        </developer>
    </developers>
    <modules>
        <module>yyds-common</module>
        <module>yyds-mqtt</module>
        <module>yyds-register</module>
        <module>yyds-iarpc-starter</module>
        <module>yyds-balancer</module>
        <module>yyds-iarpc-dependencies</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <revision>3.5.23.SNAPSHOT</revision>
        <spring-boot.version>3.5.0</spring-boot.version>
<!--        <spring-cloud.version>Finchley.SR4</spring-cloud.version>-->
        <build.plugins.plugin.version>3.13.0</build.plugins.plugin.version>
        <build.plugins.antrun.version>3.0.0</build.plugins.antrun.version>
        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
        <!--解决格式提示问题-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <base.jar.path>${main.basedir}/baseJar</base.jar.path>
        <main.basedir>${basedir}</main.basedir>
        <skipTest>true</skipTest>
        <java.version>21</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <!-- Flatten and simplify our own POM for install/deploy -->
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>oss</flattenMode>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <flattenedPomFilename>${artifactId}-${version}.xml</flattenedPomFilename>
                            <pomElements>
                                <pluginManagement>keep</pluginManagement>
                                <repositories>remove</repositories>
                                <properties>keep</properties>
                            </pomElements>
                        </configuration>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${build.plugins.plugin.version}</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version> <!-- 使用最新稳定版本 -->
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <inherited>true</inherited>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-lang3</artifactId>
                        <version>3.7</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${build.plugins.antrun.version}</version>
                <executions>
                    <execution>
                        <id>package</id>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <echo>delete ${base.jar.path}/${artifactId}-${version}.jar</echo>
                                <!--                                <delete file="${base.jar.path}/${artifactId}-${version}.jar">-->
                                <delete file="${base.jar.path}/${artifactId}-${version}.*">
                                </delete>
                                <echo>copy ${project.build.outputDirectory} *.jar or *.xml to ${base.jar.path}</echo>
                                <copy todir="${base.jar.path}">
                                    <fileset dir="${project.build.directory}">
                                        <include name="*.jar"/>
                                        <include name="*.xml"/>
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <gpgArguments>
                        <arg>--pinentry-mode</arg>
                        <arg>loopback</arg>
                    </gpgArguments>
                    <passphraseServerId>gpg.passphrase</passphraseServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.6.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
                <executions>
                    <execution>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>fast</id>
            <activation>
                <property>
                    <name>fast</name>
                </property>
            </activation>
            <properties>
                <disable.checks>true</disable.checks>
            </properties>
        </profile>
        <!--        <profile>-->
        <!--            <id>full</id>-->
        <!--            <activation>-->
        <!--                <property>-->
        <!--                    <name>full</name>-->
        <!--                </property>-->
        <!--            </activation>-->
        <!--            <build>-->
        <!--                <plugins>-->

        <!--                </plugins>-->
        <!--            </build>-->
        <!--        </profile>-->
    </profiles>

    <!--    <distributionManagement>-->
    <!--        <repository>-->
    <!--            <id>central</id>-->
    <!--            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
    <!--        </repository>-->
    <!--        <snapshotRepository>-->
    <!--            <id>central</id>-->
    <!--            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>-->
    <!--        </snapshotRepository>-->
    <!--    </distributionManagement>-->
    <!--<distributionManagement>
        <repository>
            <id>releases</id>
            <name>Nexus Release Repository</name>
            <url>http://192.168.0.234:8881/nexus/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Nexus Snapshot Repository</name>
            <url>http://192.168.0.234:8881/nexus/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>-->
</project>